--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pug": "^2.0.4"
   }
 }
