--- a/views/package.json
+++ b/views/package.json
@@ -18,7 +18,9 @@
   "description": "",
   "dependencies": {
     "config": "^3.2.1",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
     "mongodb": "^3.3.0-beta2",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
