--- a/views/package.json
+++ b/views/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "mongodb": "^3.3.0-beta2",
+    "mongoose": "^5.6.8",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "pug": "^2.0.4"
