--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi": "^14.3.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.8",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "pug": "^2.0.4"
