--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config": "^3.2.2",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "file-reader": "^1.1.1",
     "joi": "^14.3.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.8",
