--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "homepage": "https://github.com/Bubilix/Blood-pressure#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "config": "^3.2.2",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "file-reader": "^1.1.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.8",
     "multer": "^1.4.2",
