--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/Bubilix/Blood-pressure#readme",
   "description": "",
   "dependencies": {
+    "assert": "^2.0.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "config": "^3.2.2",
