--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "description": "",
   "dependencies": {
     "assert": "^2.0.0",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "config": "^3.2.2",
     "debug": "^4.1.1",
