--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "file-reader": "^1.1.1",
+    "helmet": "^3.21.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
