--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "assert": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.8.0",
     "config": "^3.2.2",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
+    "echarts": "^4.3.0",
+    "echarts-gl": "^1.1.1",
     "express": "^4.17.1",
     "file-reader": "^1.1.1",
     "helmet": "^3.21.0",
