--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "8.9.4"
   },
   "repository": {
     "type": "git",
@@ -21,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chart.js": "^2.8.0",
+    "compression": "^1.7.4",
     "config": "^3.2.2",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
@@ -28,7 +33,7 @@
     "echarts-gl": "^1.1.1",
     "express": "^4.17.1",
     "file-reader": "^1.1.1",
-    "helmet": "^3.21.0",
+    "helmet": "^3.21.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
