--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "engines": {
     "node": "10.15.1"
@@ -28,6 +28,7 @@
     "compression": "^1.7.4",
     "config": "^3.2.2",
     "cookie-parser": "^1.4.4",
+    "core-js": "^3.6.2",
     "debug": "^4.1.1",
     "echarts": "^4.3.0",
     "echarts-gl": "^1.1.1",
